[package]
name = "airmotion"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.4"
block2 = "0.6.1"
embed_plist = "1.2.2"
futures = "0.3.31"
objc2 = "0.6.1"
objc2-core-motion = "0.3.1"
objc2-foundation = "0.3.1"
serde_json = "1.0.141"
tokio = {version = "1.46.1", features = ["full"]}
